--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "tar-js": "^0.3.0",
     "vue": "^3.5.24"
   },
   "devDependencies": {
+    "@types/tar-js": "^0.3.5",
     "@vitejs/plugin-vue": "^6.0.1",
     "vite": "^7.2.4"
   }
